force-app/main/default/objects/Activity/fields/Address_Link__c.field-meta.xml
<CustomField>
    <fullName>Address_Link__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.apple.com/?address=&quot;&amp; Home_Service__r.Street__c &amp;&quot;,&quot;&amp; Home_Service__r.City__c &amp;&quot;,&quot;&amp; Home_Service__r.State__c &amp;&quot;+&quot;&amp; Home_Service__r.Zip__c, Home_Service__r.Street__c &amp;&quot; &quot;&amp; Home_Service__r.City__c &amp;&quot;, &quot;&amp; Home_Service__r.State__c &amp;&quot; &quot;&amp; Home_Service__r.Zip__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Link</label>
    <type>Text</type>
</CustomField>