force-app/main/default/objects/Activity/fields/Affiliated_Rep_Industry__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Rep_Industry__c</fullName>
    <formula>IF(
 CONTAINS(assignedPersonnel__r.Profile__c,&quot;Solar&quot;),&quot;Solar&quot;,
IF(
CONTAINS(assignedPersonnel__r.Profile__c,&quot;Water&quot;),&quot;Water&quot;,
IF(
CONTAINS(assignedPersonnel__r.Profile__c,&quot;Window&quot;),&quot;Window&quot;,
IF(
CONTAINS(assignedPersonnel__r.Profile__c,&quot;Automation&quot;), &quot;Home Automation&quot;,
IF(
CONTAINS(assignedPersonnel__r.Profile__c,&quot;Pest&quot;), &quot;Pest Control&quot;,&quot;-&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliated Rep Industry</label>
    <type>Text</type>
</CustomField>