force-app/main/default/objects/Activity/fields/Appointment_results__c.field-meta.xml
<CustomField>
    <fullName>Appointment_results__c</fullName>
    <label>Appointment results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>NQ</fullName>
            </value>
            <value>
                <fullName>1 Leg</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Bid Submitted</fullName>
            </value>
            <value>
                <fullName>Sale Pending</fullName>
            </value>
            <value>
                <fullName>Pending Cancel</fullName>
            </value>
            <value>
                <fullName>Sale Approved</fullName>
            </value>
            <value>
                <fullName>Sale Cancelled</fullName>
            </value>
            <value>
                <fullName>Sale Turn Down</fullName>
            </value>
            <value>
                <fullName>No show</fullName>
                <label>No Show</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>