force-app/main/default/objects/Activity/fields/appointmentLink__c.field-meta.xml
<CustomField>
    <fullName>appointmentLink__c</fullName>
    <label>Appointment Link</label>
    <length>200</length>
    <type>Text</type>
</CustomField>