force-app/main/default/objects/Activity/fields/assignedPersonnel__c.field-meta.xml
<CustomField>
    <fullName>assignedPersonnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliated Rep</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>