force-app/main/default/objects/Activity/fields/Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Call_Center__c</fullName>
    <label>Call Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>