force-app/main/default/objects/Activity/fields/Call_Cloud_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Cloud_Call_Status__c</fullName>
    <label>Call Cloud: Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Rehashed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>