force-app/main/default/objects/Activity/fields/Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes__c</fullName>
    <label>Call Notes</label>
    <type>TextArea</type>
</CustomField>