force-app/main/default/objects/Activity/fields/Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Call_Purpose__c</fullName>
    <label>Call Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Rehash</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>