force-app/main/default/objects/Activity/fields/Call_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Call_Timestamp__c</fullName>
    <label>Call Timestamp</label>
    <type>DateTime</type>
</CustomField>