force-app/main/default/objects/Activity/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <label>ClientID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>