force-app/main/default/objects/Activity/fields/Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Confirmation__c</fullName>
    <label>Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Meetings__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>