force-app/main/default/objects/Activity/fields/Confirmation_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date_and_Time__c</fullName>
    <label>Confirmation Date and Time</label>
    <type>DateTime</type>
</CustomField>