force-app/main/default/objects/Activity/fields/Confirmation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_DateTime__c</fullName>
    <label>Confirmation DateTime</label>
    <type>DateTime</type>
</CustomField>