force-app/main/default/objects/Activity/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <label>Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed Running Blind</fullName>
            </value>
            <value>
                <fullName>Confirmed via Text</fullName>
            </value>
            <value>
                <fullName>Confirmed Voice</fullName>
            </value>
            <value>
                <fullName>Confirmed Via Email</fullName>
            </value>
            <value>
                <fullName>No Good</fullName>
            </value>
            <value>
                <fullName>No Show to Confirm</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Confirmation Text Sent</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>DNR</fullName>
            </value>
            <value>
                <fullName>Cancelled In Transit</fullName>
            </value>
            <value>
                <fullName>CRB</fullName>
            </value>
            <value>
                <fullName>CVT</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>NSTC</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>