force-app/main/default/objects/Activity/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <formula>IF(ISPICKVAL( Confirmation_Status__c  , &quot;Confirmed Running Blind&quot;) || ISPICKVAL( Confirmation_Status__c  , &quot;Confirmed via Text&quot;) || ISPICKVAL( Confirmation_Status__c  , &quot;Confirmed Voice&quot;)||  Dispatched__c  , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>