force-app/main/default/objects/Activity/fields/Confirming_Agent__c.field-meta.xml
<CustomField>
    <fullName>Confirming_Agent__c</fullName>
    <label>Confirming Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>