force-app/main/default/objects/Activity/fields/Current_Event_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Current_Event_DateTime__c</fullName>
    <label>Current Event DateTime</label>
    <type>DateTime</type>
</CustomField>