force-app/main/default/objects/Activity/fields/Date_stamp_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Date_stamp_Dispatched__c</fullName>
    <label>Date stamp: Dispatched</label>
    <type>Date</type>
</CustomField>