force-app/main/default/objects/Activity/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <formula>IF( TEXT(Appointment_results__c ) = &apos;Sale pending&apos;  || TEXT(Appointment_results__c ) = &apos;Sale Cancelled&apos;  || TEXT(Appointment_results__c ) = &apos;Sale Turn Down&apos;  || TEXT(Appointment_results__c ) = &apos;Sale Approved&apos; || TEXT(Appointment_results__c ) = &apos;PM&apos; || TEXT(Appointment_results__c ) = &apos;Bid Submitted&apos; || TEXT(Appointment_results__c ) = &apos;Pending Cancel&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>