force-app/main/default/objects/Activity/fields/DiacoAppoiment2__EventConfig__c.field-meta.xml
<CustomField>
    <fullName>DiacoAppoiment2__EventConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Config</label>
    <referenceTo>DiacoAppoiment2__EventConfig__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>