force-app/main/default/objects/Activity/fields/Dispatch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Notes__c</fullName>
    <label>Dispatch Notes</label>
    <type>TextArea</type>
</CustomField>