force-app/main/default/objects/Activity/fields/Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Dispatched__c</fullName>
    <formula>IF( ISNULL(Date_stamp_Dispatched__c ),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatched</label>
    <type>Checkbox</type>
</CustomField>