force-app/main/default/objects/Activity/fields/Dispatched_By__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_By__c</fullName>
    <label>Dispatched By</label>
    <length>16</length>
    <type>Text</type>
</CustomField>