force-app/main/default/objects/Activity/fields/Dispositions__c.field-meta.xml
<CustomField>
    <fullName>Dispositions__c</fullName>
    <label>Dispositions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Has Provider</fullName>
            </value>
            <value>
                <fullName>No English</fullName>
            </value>
            <value>
                <fullName>Not Homeowner</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Has System</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>