force-app/main/default/objects/Activity/fields/fActivityDate__c.field-meta.xml
<CustomField>
    <fullName>fActivityDate__c</fullName>
    <formula>TEXT ( ActivityDate )</formula>
    <label>fActivityDate</label>
    <type>Text</type>
</CustomField>