force-app/main/default/objects/Activity/fields/Final_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Final_Disposition__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Was this call task a final disposition?</description>
    <inlineHelpText>Was this call task a final disposition?</inlineHelpText>
    <label>Final Disposition</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>