force-app/main/default/objects/Activity/fields/Final_Disposition_Flag__c.field-meta.xml
<CustomField>
    <fullName>Final_Disposition_Flag__c</fullName>
    <formula>if(
 Final_Disposition__c = 0, False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Disposition Flag</label>
    <type>Checkbox</type>
</CustomField>