force-app/main/default/objects/Activity/fields/Forward_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Forward_To_Number__c</fullName>
    <label>Forward To Number:</label>
    <type>Phone</type>
</CustomField>