force-app/main/default/objects/Activity/fields/Going_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Going_In_Date_Time__c</fullName>
    <label>Going In: Date Time</label>
    <type>DateTime</type>
</CustomField>