force-app/main/default/objects/Activity/fields/Home_Service__c.field-meta.xml
<CustomField>
    <fullName>Home_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Service</label>
    <referenceTo>Home_Services__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>