force-app/main/default/objects/Activity/fields/Home_Service_RT__c.field-meta.xml
<CustomField>
    <fullName>Home_Service_RT__c</fullName>
    <formula>Home_Service__r.RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Service RT</label>
    <type>Text</type>
</CustomField>