force-app/main/default/objects/Activity/fields/In_Transit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Transit_Date_Time__c</fullName>
    <label>In Transit: Date Time</label>
    <type>DateTime</type>
</CustomField>