force-app/main/default/objects/Activity/fields/In_Transit_Duration__c.field-meta.xml
<CustomField>
    <fullName>In_Transit_Duration__c</fullName>
    <formula>(Going_In_Date_Time__c  - In_Transit_Date_Time__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Transit Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>