force-app/main/default/objects/Activity/fields/Meetings__c.field-meta.xml
<CustomField>
    <fullName>Meetings__c</fullName>
    <label>Meetings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Meeting</fullName>
            </value>
            <value>
                <fullName>2nd Meeting</fullName>
            </value>
            <value>
                <fullName>3rd Meeting</fullName>
            </value>
            <value>
                <fullName>4th Meeting</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>