force-app/main/default/objects/Activity/fields/Missing_Notification__c.field-meta.xml
<CustomField>
    <fullName>Missing_Notification__c</fullName>
    <formula>IF( ISBLANK(In_Transit_Date_Time__c), &quot; - In Transit&quot;+BR(),&quot;&quot;) +
IF( ISBLANK(Going_In_Date_Time__c), &quot; - Going In&quot;+BR(),&quot;&quot;) +
IF(  ISBLANK(Out_Date_Time__c), &quot; - Out&quot;+BR(),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Notification</label>
    <type>Text</type>
</CustomField>