force-app/main/default/objects/Activity/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Home_Service__r.Account__r.FirstName  + &quot;, &quot; +   Home_Service__r.Account__r.LastName</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>