force-app/main/default/objects/Activity/fields/No_Good__c.field-meta.xml
<CustomField>
    <fullName>No_Good__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;NG&quot;) || ISPICKVAL(Appointment_results__c , &quot;NQ&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Good</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>