force-app/main/default/objects/Activity/fields/No_Good_Reasons_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>No_Good_Reasons_Confirmation__c</fullName>
    <label>No Good Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Confirmation_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>In contract</fullName>
            </value>
            <value>
                <fullName>Dead Lead</fullName>
            </value>
            <value>
                <fullName>Language barrier</fullName>
            </value>
            <value>
                <fullName>Duplicate lead</fullName>
            </value>
            <value>
                <fullName>Had System</fullName>
            </value>
            <value>
                <fullName>Bought System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>