force-app/main/default/objects/Activity/fields/No_Good_Reasons_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>No_Good_Reasons_Dispatch__c</fullName>
    <label>No Good Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Appointment_results__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No money/motivation</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>In contract</fullName>
            </value>
            <value>
                <fullName>Has a system</fullName>
            </value>
            <value>
                <fullName>Window repair</fullName>
            </value>
            <value>
                <fullName>Wants product we don’t carry</fullName>
            </value>
            <value>
                <fullName>No showed multiple times</fullName>
            </value>
            <value>
                <fullName>Language barrier</fullName>
            </value>
            <value>
                <fullName>Duplicate lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>