force-app/main/default/objects/Activity/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;NS&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Show</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>