force-app/main/default/objects/Activity/fields/Non_Qualified_Reasons_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Non_Qualified_Reasons_Dispatch__c</fullName>
    <label>Non-Qualified Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Appointment_results__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bills too low</fullName>
            </value>
            <value>
                <fullName>Low credit</fullName>
            </value>
            <value>
                <fullName>Low income</fullName>
            </value>
            <value>
                <fullName>Does not meet requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>