force-app/main/default/objects/Activity/fields/Not_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Not_Dispatched__c</fullName>
    <formula>OR(AND( ActivityDate &lt; TODAY(), TEXT(Confirmation_Status__c) = &quot;Confirmed Voice&quot;, OR(Owner:User.Id  = &quot;005410000063Ajs&quot;,Owner:User.Id  = &quot;00541000005Hdpd&quot;)),AND( ActivityDate &lt; TODAY(), TEXT(Confirmation_Status__c) = &quot;Confirmed via Text&quot;,OR(Owner:User.Id  = &quot;005410000063Ajs&quot;,Owner:User.Id  = &quot;00541000005Hdpd&quot;)),AND( ActivityDate &lt; TODAY(), TEXT(Confirmation_Status__c) = &quot;Confirmed Voice&quot;, OR(Owner:User.Id  = &quot;005410000063Ajs&quot;,Owner:User.Id  = &quot;00541000005Hdpd&quot;)),AND( ActivityDate &lt; TODAY(), TEXT(Confirmation_Status__c) = &quot;Confirmed via Text&quot;, OR(Owner:User.Id  = &quot;005410000063Ajs&quot;,Owner:User.Id  = &quot;00541000005Hdpd&quot;) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Dispatched</label>
    <type>Checkbox</type>
</CustomField>