force-app/main/default/objects/Activity/fields/Only_one_decision_maker_present__c.field-meta.xml
<CustomField>
    <fullName>Only_one_decision_maker_present__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;Only One Decision Maker Present&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Only one decision maker present</label>
    <type>Checkbox</type>
</CustomField>