force-app/main/default/objects/Activity/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>TextArea</type>
</CustomField>