force-app/main/default/objects/Activity/fields/Out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Out_Date_Time__c</fullName>
    <label>Out: Date Time</label>
    <type>DateTime</type>
</CustomField>