force-app/main/default/objects/Activity/fields/Pitch_and_Miss__c.field-meta.xml
<CustomField>
    <fullName>Pitch_and_Miss__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;PM&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitch and Miss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>