force-app/main/default/objects/Activity/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <label>ProductID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>