force-app/main/default/objects/Activity/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;Quote&quot;) || ISPICKVAL(Appointment_results__c , &quot;Bid Submitted&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>