force-app/main/default/objects/Activity/fields/Rep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rep_Notes__c</fullName>
    <label>Rep Notes</label>
    <type>TextArea</type>
</CustomField>