force-app/main/default/objects/Activity/fields/Rep_Status__c.field-meta.xml
<CustomField>
    <fullName>Rep_Status__c</fullName>
    <label>Rep Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Going In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>